--- a/TODO
+++ b/TODO
@@ -1,3 +1,10 @@
 
 Todo:
-  ☐ BUG 直接按[=] 會紀錄結果
+  ☐ BUG 直接按[=] 會紀錄結果，不應該紀錄
+  ☐ 增加All clear按鈕，把按鈕補齊
+  ☐ 調整文字間距
+  ☐ 調整色彩
+  ☐ expression能換行
+  ☐ logo換成向量圖
+  
+  
