--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@ Todo:
   ☐ BUG 直接按[=] 會紀錄結果，不應該紀錄
   ☐ 增加All clear按鈕，把按鈕補齊
   ☐ 調整文字間距
-  ☐ 調整色彩
+  ✔ 調整色彩 @done(19-02-12 14:02)
   ☐ expression能換行
   ☐ logo換成向量圖
   
