--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 
 Todo:
   ✔ BUG 直接按[=] 會紀錄結果，不應該紀錄 @done(19-02-13 09:50)
-  ☐ 增加All clear按鈕，把按鈕補齊
+  ✔ 增加All clear按鈕，把按鈕補齊 @done(19-02-13 10:06)
   ☐ 調整文字間距
   ✔ 調整色彩 @done(19-02-12 14:02)
   ☐ expression能換行
