--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@ Todo:
   ☐ 調整文字間距
   ✔ 調整色彩 @done(19-02-12 14:02)
   ☐ expression能換行
-  ☐ logo換成向量圖
+  ✔ logo換成向量圖 @done(19-02-13 14:15)
   ☐ All clear按鈕目前無法用鍵盤控制 :(
   
   
