--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@ Todo:
   ✔ logo換成向量圖 @done(19-02-13 14:15)
   ☐ All clear按鈕目前無法用鍵盤控制 :(
   ☐ Bug: Enter按太快，計算還沒完成就更新結果
-  ☐ Bug: 答案是0時 不會顯示 :(
+  ✔ Bug: 答案是0時 不會顯示 :( @done(19-02-14 14:27)
   
 
   
