Fix: only 2 digits after the decimal point

--- a/TODO
+++ b/TODO
@@ -9,7 +9,7 @@ Todo:
   ☐ All clear按鈕目前無法用鍵盤控制 :(
   ☐ Bug: Enter按太快，計算還沒完成就更新結果
   ✔ Bug: 答案是0時 不會顯示 :( @done(19-02-14 14:27)
-  ☐ 限制結果的小數位
+  ✔ 限制結果的小數位 @done(19-03-23 17:34)
   ✔ Android Chrome 100VH 問題 @done(19-03-23 16:21)
   
 
