--- a/TODO
+++ b/TODO
@@ -11,7 +11,7 @@ Todo:
   ✔ Bug: 答案是0時 不會顯示 :( @done(19-02-14 14:27)
   ✔ 限制結果的小數位 @done(19-03-23 17:34)
   ✔ Android Chrome 100VH 問題 @done(19-03-23 16:21)
-  
+  ✔ 計算結果太多時，網頁會變長 @done(19-03-23 18:24)
 
   
   
